fix button letter spacing

--- a/src/ui/Button.module.scss
+++ b/src/ui/Button.module.scss
@@ -15,6 +15,7 @@
   border: 2px solid white;
   @include media($ipad-land) {
     font-size: 12px;
+    letter-spacing: 0.3px;
   }
 
   @media (hover: hover) {
